<resources>
    <string name="app_name">Movie App</string>
    <string name="movie">Movie</string>
    <string name="favorite">Favorite</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="image_description">Image Description</string>
    <string name="text_primary">Text Primary</string>
    <string name="text_subtitle">TextSubtitle</string>
    <string name="no_data">No Data</string>
    <string name="something_wrong">Something went wrong</string>
    <string name="rating">0.0</string>
    <string name="overview">Overview</string>
    <string name="title">Title</string>
    <string name="vote_average">Vote Average</string>
    <string name="poster">Poster</string>
</resources>