<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="16dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".detail.DetailActivity"
    tools:showIn="@layout/activity_detail">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@string/overview"
            android:textSize="18sp" />

        <View
            android:layout_width="60dp"
            android:layout_height="2dp"
            android:background="@color/lightBlue" />

        <TextView
            android:id="@+id/tv_overview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif"
            android:text="@string/overview"
            android:textSize="14sp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/vote_average"
            android:textSize="18sp" />


        <View
            android:layout_width="60dp"
            android:layout_height="2dp"
            android:background="@color/lightBlue" />

        <TextView
            android:id="@+id/tv_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif"
            android:text="@string/rating"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/poster"
            android:textSize="18sp" />

        <View
            android:layout_width="40dp"
            android:layout_height="2dp"
            android:background="@color/lightBlue" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:padding="10dp">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_weight="1"
                app:cardCornerRadius="10dp">

                <ImageView
                    android:contentDescription="@string/image_description"
                    android:id="@+id/iv_poster_1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    tools:src="@color/black" />
            </androidx.cardview.widget.CardView>

            <Space
                android:layout_width="5dp"
                android:layout_height="match_parent" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_weight="1"
                app:cardCornerRadius="10dp">

                <ImageView
                    android:contentDescription="@string/image_description"
                    android:id="@+id/iv_poster_2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    tools:src="@color/black" />
            </androidx.cardview.widget.CardView>


        </LinearLayout>
    </LinearLayout>


</androidx.core.widget.NestedScrollView>